--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,6 @@
 .idea/modules.xml
 .idea/php.xml
 .idea/vcs.xml
+.history/injection-history_20200812143314.html
+.history/injection-history_20200812222634.html
+.history/
